[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/character_maleAdventurer_sheet.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Player/StateMachine.gd" type="Script" id=3]
[ext_resource path="res://Player/Idle.gd" type="Script" id=4]
[ext_resource path="res://Player/Walk.gd" type="Script" id=5]
[ext_resource path="res://Player/Jump.gd" type="Script" id=6]
[ext_resource path="res://Player/Fall.gd" type="Script" id=7]

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 96, 128 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 576, 256, 96, 128 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 672, 256, 96, 128 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 768, 256, 96, 128 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 672, 256, 96, 128 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 96, 128 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 96, 128 )

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ SubResource( 7 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "Walk",
"speed": 12.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ SubResource( 12 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=4]
height = 25.0

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Animations" type="AnimatedSprite" parent="."]
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 6 )
animation = "Fall"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 9 )
shape = SubResource( 4 )

[node name="Coyote" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="JumpBuffer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 4 )

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="Jump" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Fall" type="Node" parent="StateMachine"]
script = ExtResource( 7 )

[connection signal="timeout" from="Coyote" to="." method="_on_Coyote_timeout"]
[connection signal="timeout" from="JumpBuffer" to="." method="_on_JumpBuffer_timeout"]
